[package]
name = "but-next"
version = "0.1.0"
edition = "2021"
authors = ["NORMAL-EX"]
description = "A modern, incremental file backup tool with content-addressable storage, encryption, and snapshot management"
license = "MIT"
repository = "https://github.com/NORMAL-EX/but-next"
keywords = ["backup", "incremental", "snapshot", "encryption", "deduplication"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.75"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
blake3 = "1"
aes-gcm = "0.10"
rand = "0.8"
zstd = "0.13"
tar = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
indicatif = "0.17"
anyhow = "1"
thiserror = "2"
serde_json = "1.0.149"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
